// See README.txt for information and build instructions.

package tutorial;

option java_package = "com.baidu.bjf.remoting.protobuf.complexList";
option java_outer_classname = "AddressBookProtos";

message Person {
  required string name = 1;
  required int32 id = 2;        // Unique ID number for this person.
  optional string email = 3;
  optional double doubleF = 4;  
  optional float  floatF = 5;
  optional bytes bytesF = 6;
  optional bool boolF = 7;

}

// Our address book file is just one of these.
message AddressBook {
  repeated Person person = 1;
  
  repeated TypeDef typeDef = 2;

}

  enum TypeDef {
    TEXT = 1;
    NUMBER = 2;
    DECIMAL = 4;
    ID = 8;
    URL = 16;
}
